--- a/views/player.ejs
+++ b/views/player.ejs
@@ -53,8 +53,8 @@
   </div>
 </div>
 
-  <div class="yt-watch-page-container"> <!-- New main container for 2-column layout -->
-    <div class="yt-main-content"> <!-- Left column for player and video details -->
+  <div class="yt-watch-page-container">
+    <div class="yt-main-content"> 
       <% if (typeof video !== 'undefined' && video && video._id && video.contentType) { %>
         <div class="video-player-main-column">
           <%# <div style="margin-bottom: 10px;"> Removed Back button here </div> %>
